# 8days-arduino

./: .gitignore  README.md  app.py  pyproject.toml
arduino/blink/: blink.ino
arduino/pixel/: pixel.ino
components/light/: light.ino
components/rgb/: rgb.ino
examples/dashboard/: app.py  chatbot.py  control.py  dashboard.ino  dashboard.py  system_prompt.md
examples/echobot/: echobot.py
examples/function_calling/: function_calling.py
examples/led/: led.ino  led.py
examples/light/: light.ino  light.py
examples/message/: message.ino  message.py
examples/navigation/: app.py  control.py  dashboard.py
examples/payload/: payload.py
examples/persona/: persona.py
examples/pixel/: pixel.py
examples/servo/: servo.ino  servo.py
examples/system_prompt/: system_prompt.md  system_prompt.py
examples/two_way/: two_way.py
