[project]
name = "streamlit-arduino"
version = "0.1.0"
description = "Demostration of Streamlit with Arduino"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.68.0",
    "pandas>=2.3.3",
    "pyserial>=3.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
    "watchdog>=6.0.0",
]
