[project]
name = "arduino-8days"
version = "0.1.0"
description = "An 8-day journey with Arduino and Streamlit, exploring real-time data flow and AI-driven control."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.68.0",
    "pandas>=2.3.3",
    "pyserial>=3.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
    "watchdog>=6.0.0",
]
